# IPC_Offline

./: ArgPassing.c  ArgPassingError.c  CMakeLists.txt  MultArgPassing.c  Queue.c  Queue.h  StackMng.c  ThreadCreate.c  ThreadJoin.c  fileRead.c  input.txt  main  main.c  mutex.c  output.txt  prodCons.c  semaphore.c  target.c
